# PX4_THRUST_VECTOR

./: .clang-tidy  .gitmodules
.cursor/skills/git-commit-message/: SKILL.md
.cursor/skills/px4-build/: SKILL.md
ROMFS/px4fmu_common/init.d/: CMakeLists.txt  rc.heli_defaults  rc.mc_apps  rc.vtol_defaults
boards/hcl/hcl-v1/: default.px4board  firmware.prototype
boards/px4/fmu-v6x/: default.px4board
boards/px4/sitl/: default.px4board
msg/: CMakeLists.txt  RollPitchSetpoint.msg  ServoAngle.msg  ThrustVectorMode.msg
src/drivers/joican/: CMakeLists.txt  Kconfig  joican.cpp  joican.hpp  joican_params.c  joican_raw_can_driver.cpp  joican_raw_can_driver.hpp  joican_socket_can_driver.cpp  joican_socket_can_driver.hpp  module.yaml  ring_buffer.hpp
src/drivers/serial_test/: CMakeLists.txt  Kconfig  module.yaml  serial_test.cpp  serial_test.hpp  serial_test_main.cpp  serial_test_params.c  serial_test_receiver.cpp
src/lib/: CMakeLists.txt
src/lib/bezier/: BezierN.cpp
src/lib/collision_prevention/: CollisionPrevention.hpp  CollisionPreventionTest.cpp
src/lib/iLQR/: CMakeLists.txt
src/lib/quad_prog/: CholeskyDecomposition.hpp  DiagnoalMatrix.hpp  KKTMethod.hpp  QuadProg.hpp  QuadProgEigen.hpp  QuadProgNew.hpp
src/modules/control_allocator/: ControlAllocator.cpp  ControlAllocator.hpp  module.yaml
src/modules/control_allocator/VehicleActuatorEffectiveness/: ActuatorEffectiveness3DRotors.cpp  ActuatorEffectiveness3DRotors.hpp  ActuatorEffectivenessMCThrustVector.cpp  ActuatorEffectivenessMCThrustVector.hpp  CMakeLists.txt
validation/: module_schema.yaml
(+138 files in other folders)
