px4_add_library(VehicleActuatorEffectiveness
	ActuatorEffectivenessMultirotor.cpp
	ActuatorEffectivenessMultirotor.hpp
	ActuatorEffectivenessRotors.cpp
	ActuatorEffectivenessRotors.hpp
	ActuatorEffectivenessMCThrustVector.cpp
	ActuatorEffectivenessMCThrustVector.hpp
	ActuatorEffectiveness3DRotors.cpp
	ActuatorEffectiveness3DRotors.cpp
)

target_compile_options(VehicleActuatorEffectiveness PRIVATE ${MAX_CUSTOM_OPT_LEVEL})
target_include_directories(VehicleActuatorEffectiveness PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(VehicleActuatorEffectiveness
	PRIVATE
		mathlib
		ActuatorEffectiveness
)

px4_add_functional_gtest(SRC ActuatorEffectivenessHelicopterTest.cpp LINKLIBS VehicleActuatorEffectiveness)
px4_add_functional_gtest(SRC ActuatorEffectivenessRotorsTest.cpp LINKLIBS VehicleActuatorEffectiveness)
